# pkg/docs/proxy/swagger.json
@@ -142,7 +142,7 @@
                 }
             }
         },
-        "/api/v1/apikey": {
+        "/api/v1/api-key": {
             "post": {
                 "description": "\u003cb\u003e\u003cu\u003eCreate an API key\u003c/u\u003e\u003c/b\u003e",
                 "consumes": [
@@ -152,7 +152,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "API-key"
+                    "API-Key"
                 ],
                 "summary": "Create an API key",
                 "parameters": [
@@ -162,7 +162,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.Claims"
+                            "$ref": "#/definitions/rototiller.Claims"
                         }
                     }
                 ],
@@ -1477,6 +1477,11 @@
         },
         "/api/v1/tasks": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -1511,6 +1516,11 @@
         },
         "/api/v1/tasks/{type}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -1563,18 +1573,18 @@
         }
     },
     "definitions": {
-        "api.Claims": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                }
-            }
-        },
         "rototiller.Auth": {
             "type": "object",
             "properties": {
                 "api_key": {
+                    "type": "string"
+                }
+            }
+        },
+        "rototiller.Claims": {
+            "type": "object",
+            "properties": {
+                "email": {
                     "type": "string"
                 }
             }
