# pkg/service/task_handlers.go
@@ -10,14 +10,14 @@ import (
 	"github.com/logsquaredn/rototiller/pkg/api"
 )
 
-// @Security     ApiKeyAuth
-// @Summary  Get a list of task types
-// @Tags     Task
-// @Produce  application/json
-// @Success  200  {object}  []rototiller.Task
-// @Failure  401  {object}  rototiller.Error
-// @Failure  500  {object}  rototiller.Error
-// @Router   /api/v1/tasks [get].
+// @Security  ApiKeyAuth
+// @Summary   Get a list of task types
+// @Tags      Task
+// @Produce   application/json
+// @Success   200  {object}  []rototiller.Task
+// @Failure   401  {object}  rototiller.Error
+// @Failure   500  {object}  rototiller.Error
+// @Router    /api/v1/tasks [get].
 func (a *Handler) listTasksHandler(ctx *gin.Context) {
 	tasks, err := a.Datastore.GetTasks(
 		api.AllTaskTypes...,
@@ -35,17 +35,17 @@ func (a *Handler) listTasksHandler(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, tasks)
 }
 
-// @Security     ApiKeyAuth
-// @Summary  Get a task type
-// @Tags     Task
-// @Produce  application/json
-// @Param    type  path      string  true  "Task type"
-// @Success  200   {object}  rototiller.Task
-// @Failure  400   {object}  rototiller.Error
-// @Failure  401   {object}  rototiller.Error
-// @Failure  404   {object}  rototiller.Error
-// @Failure  500   {object}  rototiller.Error
-// @Router   /api/v1/tasks/{type} [get].
+// @Security  ApiKeyAuth
+// @Summary   Get a task type
+// @Tags      Task
+// @Produce   application/json
+// @Param     type  path      string  true  "Task type"
+// @Success   200   {object}  rototiller.Task
+// @Failure   400   {object}  rototiller.Error
+// @Failure   401   {object}  rototiller.Error
+// @Failure   404   {object}  rototiller.Error
+// @Failure   500   {object}  rototiller.Error
+// @Router    /api/v1/tasks/{type} [get].
 func (a *Handler) getTaskHandler(ctx *gin.Context) {
 	task, err := a.getTask(ctx.Param("task"))
 	if err != nil {
